--- a/app/src/main/res/layout/activity_clock_keyframe_2.xml
+++ b/app/src/main/res/layout/activity_clock_keyframe_2.xml
@@ -2,12 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_clock"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".activities.ClockActivity"
     android:background="@android:color/black">
 
-    <com.justaclock.ClockView
+    <com.justaclock.custom_views.ClockView
+        android:id="@+id/clock_view"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_centerInParent="true"
