--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -2,52 +2,67 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/colorPrimary"
     android:padding="8dp">
 
-  <TextView
-      android:id="@+id/txtv_task"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_marginBottom="8dp"
-      android:fontFamily="casual"
-      android:maxLines="1"
-      android:textAlignment="center"
-      android:textColor="@color/colorWhite"
-      android:textSize="24sp"
-      app:layout_constraintBottom_toTopOf="@+id/txtv_time"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      tools:text="@tools:sample/lorem" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        app:cardBackgroundColor="#53CDFF"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-  <TextView
-      android:id="@+id/txtv_time"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:fontFamily="casual"
-      android:maxLines="1"
-      android:textAlignment="center"
-      android:textColor="@color/colorWhite"
-      android:textSize="14sp"
-      app:layout_constraintBottom_toTopOf="@+id/imageView"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/txtv_task"
-      tools:text="@tools:sample/lorem" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cyt_bg_task_item"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/gradient_blue">
 
-  <ImageView
-      android:id="@+id/imageView"
-      android:layout_width="0dp"
-      android:layout_height="1dp"
-      android:layout_marginStart="32dp"
-      android:layout_marginTop="8dp"
-      android:layout_marginEnd="32dp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/txtv_time"
-      app:srcCompat="@color/colorAccent" />
+            <TextView
+                android:id="@+id/txtv_task"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:drawableStart="@drawable/ic_label_white_24dp"
+                android:drawablePadding="8dp"
+                android:fontFamily="sans-serif-light"
+                android:maxLines="1"
+                android:textAlignment="textStart"
+                android:textColor="@color/colorWhite"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toTopOf="@+id/txtv_time"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@tools:sample/lorem/random" />
+
+            <TextView
+                android:id="@+id/txtv_time"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="sans-serif-thin"
+                android:maxLines="1"
+                android:textAlignment="center"
+                android:textColor="@color/colorWhite"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtv_task"
+                tools:text="00:00:00" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
