--- a/app/src/main/res/layout-land/fragment_stopwatch.xml
+++ b/app/src/main/res/layout-land/fragment_stopwatch.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Stopwatch"
+        android:text="Task timer"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -63,39 +63,39 @@
         android:id="@+id/fab_play_stopwatch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintTop_toBottomOf="@+id/fab_stop_stopwatch"
+        app:layout_constraintTop_toBottomOf="@+id/rcv_tasks"
         app:srcCompat="@drawable/ic_play_button_24dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_stop_stopwatch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/fab_play_stopwatch"
-        app:layout_constraintEnd_toEndOf="@+id/fab_play_stopwatch"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/fab_play_stopwatch"
-        app:layout_constraintTop_toBottomOf="@+id/rcv_tasks"
-        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintBottom_toBottomOf="@+id/fab_play_stopwatch"
+        app:layout_constraintEnd_toStartOf="@+id/fab_play_stopwatch"
+        app:layout_constraintTop_toTopOf="@+id/fab_play_stopwatch"
         app:srcCompat="@drawable/ic_stop_black_24dp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/edtx_task"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="20dp"
         android:theme="@style/MyTextInputLayout"
-        app:layout_constraintEnd_toStartOf="@+id/fab_play_stopwatch"
+        app:layout_constraintBottom_toBottomOf="@+id/fab_play_stopwatch"
+        app:layout_constraintEnd_toStartOf="@+id/fab_stop_stopwatch"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/rcv_tasks">
+        app:layout_constraintTop_toBottomOf="@+id/rcv_tasks"
+        app:layout_constraintVertical_bias="1.0">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
