--- a/app/src/main/res/layout/fragment_stopwatch.xml
+++ b/app/src/main/res/layout/fragment_stopwatch.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Stopwatch"
+        android:text="Task timer"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
         android:textStyle="bold"
