--- a/app/src/main/res/layout/fragment_stopwatch.xml
+++ b/app/src/main/res/layout/fragment_stopwatch.xml
@@ -24,20 +24,40 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="sans-serif-medium"
-        android:textAlignment="center"
+        android:textAlignment="textEnd"
         android:textColor="@color/colorWhite"
         android:textSize="36sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/clock_of_task_timer"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rcv_tasks"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="@+id/guideline5"
+        app:layout_constraintTop_toBottomOf="@+id/rcv_tasks" />
+
+    <rm.com.clocks.ClockImageView
+        android:id="@+id/clock_of_task_timer"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_centerInParent="true"
+        app:clockColor="#BBFFFFFF"
+        app:frameWidth="regular"
+        app:hours="16"
+        app:indeterminateSpeed="2"
+        app:layout_constraintBottom_toBottomOf="@+id/chronometer"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/chronometer"
+        app:layout_constraintTop_toTopOf="@+id/chronometer"
+        app:minutes="20"
+        app:pointerWidth="thin"
+        app:timeSetDuration="400" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_tasks"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:minHeight="116dp"
         android:orientation="horizontal"
