Add the task timer module (before called "stopwatch module")

--- a/app/src/main/res/drawable/bg_puntued_task_yellow.xml
+++ b/app/src/main/res/drawable/bg_puntued_task_yellow.xml
@@ -3,6 +3,7 @@
     android:shape="rectangle">
 
     <stroke android:dashWidth="10dp" android:dashGap="10dp" android:color="#FFB856" android:width="2dp" />
+    <solid android:color="@color/colorPrimary" />
     <corners android:radius="20dp" />
 
 </shape>
