--- a/app/src/main/res/layout/fragment_task_timer.xml
+++ b/app/src/main/res/layout/fragment_task_timer.xml
@@ -131,7 +131,7 @@
         android:text="Your tasks will appear here."
         android:textColor="@color/colorWhite"
         android:textSize="18sp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/rcv_tasks"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
