Update ripple effect (Now it is in xml)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:id="@+id/cyt_clock"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/ripple_accent_corner_top_right_10dp"
         app:layout_constraintBottom_toTopOf="@+id/cyt_alarm"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.5"
@@ -51,6 +52,7 @@
         android:id="@+id/cyt_alarm"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/ripple_accent"
         app:layout_constraintBottom_toTopOf="@+id/cyt_timer"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.5"
@@ -88,6 +90,7 @@
         android:id="@+id/cyt_timer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/ripple_accent"
         app:layout_constraintBottom_toTopOf="@+id/cyt_task_timer"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.5"
@@ -125,6 +128,7 @@
         android:id="@+id/cyt_task_timer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/ripple_accent_corner_bottom_right_10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.5"
